Use FieldInferenceMetadata structure in dependencies